plugins {
    id 'java'
    id 'java-library'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"
javadoc.options.encoding = 'UTF-8'
test.systemProperty "file.encoding", "UTF-8"

test {
    useJUnitPlatform()
}

dependencies {
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.4.0"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.0"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.4.0"
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'org.jetbrains:annotations:13.0'
    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
    implementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
    implementation 'org.xerial:sqlite-jdbc:3.30.1'

    //logger is broken without concrete versions of dependencies
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'ch.qos.logback:logback-classic:1.2.3'

    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'me.tongfei:progressbar:0.8.1'
    implementation group: 'args4j', name: 'args4j', version: '2.33'
    testImplementation "com.github.tomakehurst:wiremock-jre8:2.26.3"
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/resources", "src/main/config"
        }
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'ui.ConsoleUI'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}